# randomtexteditor

./: CMakeLists.txt  README.md  makefile
.github/workflows/: main.yml
src/: display.hpp  filler.txt  getfile.hpp  global.cpp  global.h  main.cpp
